<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.YachtGame.FullscreenContainer"
    tools:context=".StartPage">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnStartGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:theme="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnViewRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/startGame"
        android:textSize="25sp"
        android:theme="@style/StartPageButton" />

    <Button
        android:id="@+id/btnViewRecord"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnExit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/viewRecord"
        android:theme="@style/StartPageButton" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/exit"
        android:theme="@style/StartPageButton" />

</RelativeLayout>