<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:theme="@style/ThemeOverlay.YachtGame.FullscreenContainer"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/scoreTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        android:padding="3dp"
        android:theme="@style/TableStyle"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score1Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score1Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score1"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />

            <TextView
                android:id="@+id/score7Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score7Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score7"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score2Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score2Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score2"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />

            <TextView
                android:id="@+id/score8Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score8Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score8"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score3Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score3Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score3"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />

            <TextView
                android:id="@+id/score9Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score9Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score9"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score4Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score4Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score4"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />

            <TextView
                android:id="@+id/score10Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score10Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score10"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score5Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score5Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score5"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />

            <TextView
                android:id="@+id/score11Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score11Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score11"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score6Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score6Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score6"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />

            <TextView
                android:id="@+id/score12Name"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/score12Name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/score12"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickScore" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/subScoreName"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/subScoreName"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subScore"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/totalScoreName"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/totalScoreName"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalScore"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/dice1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/dice3"
        android:layout_marginRight="17sp"
        android:layout_toLeftOf="@id/dice2"
        android:onClick="onClickDice"
        android:padding="5dp"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/dice3"
        android:layout_marginEnd="17sp"
        android:layout_toLeftOf="@id/dice3"
        android:onClick="onClickDice"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/dice3"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/scoreTable"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-270sp"
        android:onClick="onClickDice"
        android:padding="5dp"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/dice3"
        android:layout_marginLeft="17sp"
        android:layout_toRightOf="@id/dice3"
        android:onClick="onClickDice"
        android:padding="5dp"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/dice3"
        android:layout_marginLeft="17sp"
        android:layout_toRightOf="@id/dice4"
        android:onClick="onClickDice"
        android:padding="5dp"
        app:srcCompat="@drawable/dice1" />

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/dice3"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="-110sp"
        android:onClick="rollDices"
        android:text="@string/rollButton" />

    <ImageButton
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:onClick="resetGame"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <TextView
        android:id="@+id/tvRollCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/scoreTable"
        android:layout_alignEnd="@id/scoreTable"
        android:layout_marginTop="-40sp"
        android:textSize="23sp" />
</RelativeLayout>